# safety-rag-assistant

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: routes.py
app/core/: ingestion.py  rag_chain.py  reranker.py
app/models/: schemas.py
data/incident_reports/: incident_report_001.md  incident_report_002.md  incident_report_003.md  incident_report_004.md  incident_report_005.md  incident_report_006.md  incident_report_007.md  incident_report_008.md  incident_report_009.md  incident_report_010.md
eval/: eval_dataset.json  run_eval.py
eval/results/: eval_20260710_174352.json  eval_20260711_164236.json
tests/: conftest.py  test_api.py  test_ingestion.py  test_retrieval.py  test_schemas.py
