[project]
name = "documentation-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "black",
    "tiktoken",
    "unstructured",
    "nltk",
    "fastapi",
    "jinja2",
    "uvicorn",
    "streamlit",
    "streamlit-chat",
    "tqdm",
    "isort",
    "langchainhub",
    "langchain-community",
    "langsmith",
    "pillow",
    "python-dotenv",
    "langchain-google-genai>=4.2.6",
    "langchain-nvidia-ai-endpoints>=1.4.2",
    "aiofiles==25.1.0",
    "pymupdf>=1.28.0",
    "langchain-qdrant>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
]
