[project]
name = "safety-rag-assistant"
version = "0.1.0"
description = "RAG-powered Q&A over OSHA safety regulations and incident reports"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "pydantic-settings>=2.0.0",
    "langchain-core",
    "langchain-text-splitters",
    "langchain-google-genai>=4.2.6",
    "langchain-nvidia-ai-endpoints>=1.4.2",
    "langchain-qdrant>=1.1.0",
    "qdrant-client",
    "pymupdf>=1.28.0",
    "langchain-cohere>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "black",
    "isort",
]
